app/style/AccountsPage.less
@import (reference) "./main.less";
@import (reference) "./Icons.less";

.account-content-title {
  display: block;
  height: 44px;
  margin-right: auto;
  margin-bottom: 12px;
  margin-left: auto;
  border-bottom: 1px solid transparent;
  color: var(--stroke-color-hovered);
  font-size: 27px;
}

.account-content-nest {
  padding-top: 1px;
}

.account-content-nest .vertical-accordion-arrow {
  right: 0px;
  left: 65px;
  top: 44%;
  transform: rotate(0deg);
}

.account-content-title-buttons-area {
  margin-left: auto;
}

